--- a/_data/data.yml
+++ b/_data/data.yml
@@ -16,7 +16,7 @@ sidebar:
   phone: '3121381009'
   website: # No agregar http://
   linkedin: brightcoders
-  github: https://github.com/daniel-yocupicio
+  github: github.com/daniel-yocupicio
   gitlab:
   bitbucket:
   twitter: ''
