--- a/_data/data.yml
+++ b/_data/data.yml
@@ -78,26 +78,10 @@ projects:
     title: Projects
     
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: EasyHome
+        link: "https://github.com/daniel-yocupicio/EasyHOME"
+        tagline: "School project for the subject of multiplatform development, the project was carried out in react native with expo, firebase was implemented as a database and the objective of the application was to generate a mobile platform to find houses for sale or rent in colima."
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
-
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
-        
 # Registra aquí tus habilidades técnicas, para level utiliza:
 # 20% para Novice
 # 40% para Advanced beginner
