--- a/_data/data.yml
+++ b/_data/data.yml
@@ -62,7 +62,7 @@ experiences:
       Develop two modules, the knowledge acquired was:
         - Flutter.
         - Express with nodejs.
-        - BouncyCastle.
+        - Basic bouncyCastle with Java.
 
   - role: developer in training (Bootcam)
     time: 2022 - Present
