fix github and linkedin information

--- a/_data/data.yml
+++ b/_data/data.yml
@@ -15,8 +15,8 @@ sidebar:
   email: danielyocupiciovazquez@gmail.com
   phone: '3121381009'
   website: # No agregar http://
-  linkedin: https://www.linkedin.com/in/daniel-guadalupe-yocupicio-v%C3%A1zquez-620459247/
-  github: github.com/daniel-yocupicio
+  linkedin: daniel-guadalupe-yocupicio-v%C3%A1zquez-620459247/
+  github: daniel-yocupicio
   gitlab:
   bitbucket:
   twitter: 
